# redpen

./: .gitignore  Cargo.toml  run.sh  rust-toolchain.toml
.github/workflows/: slides.yml
examples/: check-panics.rs  print-fn-names-extern.rs  print-fn-names.rs  traverse-mir-and-instances.rs  traverse-mir.rs  vec-push-mir.rs
examples/check-panic/: detected.rs  detected.txt  no-panic.rs  no-panic.txt
examples/vec-push/: .gitignore  MIR-Body.txt  reachability.txt  run.sh  vec-push.rs  vec-push.txt
slides/: index.html  package-lock.json  package.json  slides.md  style.css
slides/components/: BackToTOC.vue  CodeblockSmallSized.vue  Line.vue  PanicSpots.vue  PanicSpotsDemo.vue  Rect.vue
slides/pages/: 01-intro.md  02-defid-hirid.md  03-mir.md  04-redpen-checker.md  05-linter.md  06-os-checker.md  intro.md  tricks.md
src/: call_graph.rs  detect.rs  diagnostics.rs  fn_item.rs  main.rs
tests/: check-panics.rs
tests/ui/: 1-direct.rs  1-direct.stderr  1-indirect.rs  1-indirect.stderr  2-method.rs  2-method.stderr  no-panic.rs  silence-panic.rs
tests/vec-push/: Cargo.toml  README.md
tests/vec-push/src/: main.rs
