[package]
name = "redpen"
version = "0.1.0"
edition = "2024"
default-run = "redpen"

[dependencies]
annotate-snippets = "0.12.7"

[dev-dependencies]
compiletest = { version = "0.11.2", package = "compiletest_rs" }

[package.metadata.rust-analyzer]
# This crate uses #![feature(rustc_private)] to access `rustc` APIs.
# We're tied to the specific `rustc` version 1.74.0-nigthly 2024-05-06.
rustc_private = true
